--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -79,9 +79,10 @@
     "- pim1_shortest_path:: shortest path from pim1\n",
     "- inv:: 1 if inviable, 0 if not\n",
     "- cluster:: the id of the mcl cluster it belongs to\n",
-    "- mcl_bet_cent:: betweeness centrality in the mcl cluster\n",
-    "- mcl_eig_cent:: eigenvector centrality in the mcl cluster\n",
-    "- mcl_deg_cent:: degree centrality in the mcl cluster"
+    "- cluster_size:: the size of the mcl cluster it belongs to\n",
+    "- mcl_bet_cent:: betweeness centrality within the mcl cluster\n",
+    "- mcl_eig_cent:: eigenvector centrality within the mcl cluster\n",
+    "- mcl_deg_cent:: degree centrality within the mcl cluster"
    ]
   },
   {
@@ -156,23 +157,13 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-=======
-   "source": [
-<<<<<<< HEAD
-    "I reduce the variables to reduce clutter and colour the proteins by inviability. Notice in icp55_shortest_path x global_bet_cent there are two non-inviable proteins that stand out. Also the distribution of eigenvector_centrality has a pronounced tail similar the degree distribution Georg showed us initially. I've done some minor analysis on this and I think it could be a side effect of the proteins existing in tiny (1-3) sized clusters."
-=======
-    "I reduce the variables to reduce clutter and colour the proteins by inviability. Notice in icp55_shortest_path x global_bet_cent there are two non-inviable proteins that stand out."
->>>>>>> 6bb929e68b6048ef43fc1d566308cd00140618fc
-   ],
->>>>>>> b195eaf4036ed640a132c681a6a6b057222d9cc3
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
    "source": [
-    "I reduce the variables to reduce clutter and colour the proteins by inviability. Notice in icp55_shortest_path x global_bet_cent there are two non-inviable proteins that stand out. Also the distribution of eigenvector_centrality has a pronounced tail similar the degree distribution Georg showed us initially. I've done some minor analysis on this and I think it could be a side effect of the proteins existing in tiny (1-3) sized clusters. I conjecture many clustering methods are a function of network size."
+    "I reduce the variables to reduce clutter and colour the proteins by inviability. Notice in icp55_shortest_path x global_bet_cent there are two non-inviable proteins that stand out. Also bridging_centrality seems to have 2 outlier nodes."
    ]
   },
   {
@@ -219,12 +210,12 @@
     }
    },
    "source": [
-    "To find these proteins I query the dataframe. Let's pass these to the biology students!"
+    "To find these proteins I query the dataframe. Let's pass these to the biology students! If you query the protein name without the 4932 in STRING (and changing the settings to confidence score > 900 + 20 1st shell interactors and 20 2nd shell interactors to show) you'll see that bridging centrality really does seem to bridge clusters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 144,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -233,99 +224,49 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>protein</th>\n",
-       "      <th>deg</th>\n",
-       "      <th>global_bet_cent</th>\n",
-       "      <th>global_eig_cent</th>\n",
-       "      <th>global_deg_cent</th>\n",
-       "      <th>inv</th>\n",
-       "      <th>mcl_bet_cent</th>\n",
-       "      <th>mcl_deg_cent</th>\n",
-       "      <th>mcl_eig_cent</th>\n",
-       "      <th>icp55_shortest_path</th>\n",
-       "      <th>pim1_shortest_path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>4932.Q0120</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0.029130</td>\n",
-       "      <td>1.448779e-05</td>\n",
-       "      <td>0.008095</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.016591</td>\n",
-       "      <td>0.534483</td>\n",
-       "      <td>0.162923</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1730</th>\n",
-       "      <td>4932.YJL225C</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.028042</td>\n",
-       "      <td>8.852234e-08</td>\n",
-       "      <td>0.001531</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.186511</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           protein  deg  global_bet_cent  global_eig_cent  global_deg_cent  \\\n",
-       "317     4932.Q0120   37         0.029130     1.448779e-05         0.008095   \n",
-       "1730  4932.YJL225C    7         0.028042     8.852234e-08         0.001531   \n",
-       "\n",
-       "      inv  mcl_bet_cent  mcl_deg_cent  mcl_eig_cent  icp55_shortest_path  \\\n",
-       "317     0      0.016591      0.534483      0.162923                    5   \n",
-       "1730    0      0.000000      0.250000      0.186511                    6   \n",
-       "\n",
-       "      pim1_shortest_path  \n",
-       "317                    3  \n",
-       "1730                   4  "
-      ]
+      "text/plain": "           protein  deg  global_bet_cent  global_eig_cent  global_bridge_cent  \\\n317     4932.Q0120   37         0.029130     1.448779e-05            0.000302   \n1730  4932.YJL225C    7         0.028042     8.852234e-08            0.003288   \n\n      icp55_shortest_path  pim1_shortest_path  inv  cluster  mcl_bet_cent  \\\n317                     5                   3    0       10      0.016591   \n1730                    6                   4    0       84      0.000000   \n\n      mcl_deg_cent  mcl_eig_cent  cluster_size  \n317       0.534483      0.162923            59  \n1730      0.250000      0.186511            13  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>protein</th>\n      <th>deg</th>\n      <th>global_bet_cent</th>\n      <th>global_eig_cent</th>\n      <th>global_bridge_cent</th>\n      <th>icp55_shortest_path</th>\n      <th>pim1_shortest_path</th>\n      <th>inv</th>\n      <th>cluster</th>\n      <th>mcl_bet_cent</th>\n      <th>mcl_deg_cent</th>\n      <th>mcl_eig_cent</th>\n      <th>cluster_size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>317</th>\n      <td>4932.Q0120</td>\n      <td>37</td>\n      <td>0.029130</td>\n      <td>1.448779e-05</td>\n      <td>0.000302</td>\n      <td>5</td>\n      <td>3</td>\n      <td>0</td>\n      <td>10</td>\n      <td>0.016591</td>\n      <td>0.534483</td>\n      <td>0.162923</td>\n      <td>59</td>\n    </tr>\n    <tr>\n      <th>1730</th>\n      <td>4932.YJL225C</td>\n      <td>7</td>\n      <td>0.028042</td>\n      <td>8.852234e-08</td>\n      <td>0.003288</td>\n      <td>6</td>\n      <td>4</td>\n      <td>0</td>\n      <td>84</td>\n      <td>0.000000</td>\n      <td>0.250000</td>\n      <td>0.186511</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 86,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df['icp55_shortest_path'] >= 3) & (df['global_bet_cent'] >= 0.02) & (df['inv'] == 0)]"
+    "df1 = df[(df['icp55_shortest_path'] >= 3) & (df['global_bet_cent'] >= 0.02) & (df['inv'] == 0)]\n",
+    "df1.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           protein  deg  global_bet_cent  global_eig_cent  global_bridge_cent  \\\n4097  4932.YGL181W    3         0.000160         0.000005            0.016347   \n4438  4932.YGR149W    2         0.001227         0.000277            0.029228   \n\n      icp55_shortest_path  pim1_shortest_path  inv  cluster  mcl_bet_cent  \\\n4097                    4                   4    0       32           0.0   \n4438                    5                   4    0       14           0.0   \n\n      mcl_deg_cent  mcl_eig_cent  cluster_size  \n4097      0.000000  1.525555e-14            26  \n4438      0.020833  2.349291e-02            49  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>protein</th>\n      <th>deg</th>\n      <th>global_bet_cent</th>\n      <th>global_eig_cent</th>\n      <th>global_bridge_cent</th>\n      <th>icp55_shortest_path</th>\n      <th>pim1_shortest_path</th>\n      <th>inv</th>\n      <th>cluster</th>\n      <th>mcl_bet_cent</th>\n      <th>mcl_deg_cent</th>\n      <th>mcl_eig_cent</th>\n      <th>cluster_size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4097</th>\n      <td>4932.YGL181W</td>\n      <td>3</td>\n      <td>0.000160</td>\n      <td>0.000005</td>\n      <td>0.016347</td>\n      <td>4</td>\n      <td>4</td>\n      <td>0</td>\n      <td>32</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>1.525555e-14</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>4438</th>\n      <td>4932.YGR149W</td>\n      <td>2</td>\n      <td>0.001227</td>\n      <td>0.000277</td>\n      <td>0.029228</td>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>14</td>\n      <td>0.0</td>\n      <td>0.020833</td>\n      <td>2.349291e-02</td>\n      <td>49</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df[(df['global_bridge_cent'] >= 0.01) & (df['inv'] == 0)]\n",
+    "df2.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Because I'm now suspicious of using centrality measures on small clusters, I'm going to plot the measures as a function of cluster size and it does appear that eigenvector centrality and betweeness centrality decay as a function of cluster size.\n",
-    "Therefore, using clustering methods within clusters may not be relevant."
+    "I'm also suspicious of using centrality measures on small clusters. It appears that eigenvector centrality and betweeness centrality decay as a function of cluster size.\n",
+    "Therefore, clustering scores may not be comparable across clusters."
    ],
    "metadata": {
     "collapsed": false,
@@ -336,29 +277,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 140,
-=======
-<<<<<<< HEAD
-   "execution_count": 86,
-=======
-   "execution_count": 79,
->>>>>>> 6bb929e68b6048ef43fc1d566308cd00140618fc
->>>>>>> b195eaf4036ed640a132c681a6a6b057222d9cc3
    "outputs": [
     {
      "data": {
       "text/plain": "<seaborn.axisgrid.PairGrid at 0x22f67904f88>"
      },
-<<<<<<< HEAD
      "execution_count": 140,
-=======
-<<<<<<< HEAD
-     "execution_count": 86,
-=======
-     "execution_count": 79,
->>>>>>> 6bb929e68b6048ef43fc1d566308cd00140618fc
->>>>>>> b195eaf4036ed640a132c681a6a6b057222d9cc3
      "metadata": {},
      "output_type": "execute_result"
     },
