--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -119,7 +119,7 @@
     }
    },
    "source": [
-    "I then perform exploratory data analysis using the seaborn pairplot function. In the next cell I reduce the variables plotted to reduce clutter."
+    "I then perform exploratory data analysis using the seaborn pairplot function."
    ]
   },
   {
@@ -210,12 +210,12 @@
     }
    },
    "source": [
-    "To find these proteins I query the dataframe. Let's pass these to the biology students! If you query the protein name without the 4932 in STRING (and changing the settings to confidence score > 900 + 20 1st shell interactors and 20 2nd shell interactors to show) you'll see that bridging centrality really does seem to bridge clusters."
+    "To find these proteins I query the dataframe. Let's pass these to the biology students! If you query the protein name without the 4932 in STRING (and changing the settings to confidence score > 900 + 20 1st shell interactors and 20 2nd shell interactors to show) you'll see that bridging centrality really does seem to bridge clusters. The fifth node 4932.YJL225C seems to connect one potential cluster to another almost definite cluster. I would consider this a target protein for something."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 147,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -227,13 +227,14 @@
       "text/plain": "           protein  deg  global_bet_cent  global_eig_cent  global_bridge_cent  \\\n317     4932.Q0120   37         0.029130     1.448779e-05            0.000302   \n1730  4932.YJL225C    7         0.028042     8.852234e-08            0.003288   \n\n      icp55_shortest_path  pim1_shortest_path  inv  cluster  mcl_bet_cent  \\\n317                     5                   3    0       10      0.016591   \n1730                    6                   4    0       84      0.000000   \n\n      mcl_deg_cent  mcl_eig_cent  cluster_size  \n317       0.534483      0.162923            59  \n1730      0.250000      0.186511            13  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>protein</th>\n      <th>deg</th>\n      <th>global_bet_cent</th>\n      <th>global_eig_cent</th>\n      <th>global_bridge_cent</th>\n      <th>icp55_shortest_path</th>\n      <th>pim1_shortest_path</th>\n      <th>inv</th>\n      <th>cluster</th>\n      <th>mcl_bet_cent</th>\n      <th>mcl_deg_cent</th>\n      <th>mcl_eig_cent</th>\n      <th>cluster_size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>317</th>\n      <td>4932.Q0120</td>\n      <td>37</td>\n      <td>0.029130</td>\n      <td>1.448779e-05</td>\n      <td>0.000302</td>\n      <td>5</td>\n      <td>3</td>\n      <td>0</td>\n      <td>10</td>\n      <td>0.016591</td>\n      <td>0.534483</td>\n      <td>0.162923</td>\n      <td>59</td>\n    </tr>\n    <tr>\n      <th>1730</th>\n      <td>4932.YJL225C</td>\n      <td>7</td>\n      <td>0.028042</td>\n      <td>8.852234e-08</td>\n      <td>0.003288</td>\n      <td>6</td>\n      <td>4</td>\n      <td>0</td>\n      <td>84</td>\n      <td>0.000000</td>\n      <td>0.250000</td>\n      <td>0.186511</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 144,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = df[(df['icp55_shortest_path'] >= 3) & (df['global_bet_cent'] >= 0.02) & (df['inv'] == 0)]\n",
+    "# These proteins have high betweeness centrality and are not inviable.\n",
+    "df1 = df[(df['global_bet_cent'] >= 0.02) & (df['inv'] == 0)]\n",
     "df1.head()"
    ]
   },
@@ -252,8 +253,35 @@
     }
    ],
    "source": [
+    "# These proteins have high bridgeing centrality and are not inviable.\n",
     "df2 = df[(df['global_bridge_cent'] >= 0.01) & (df['inv'] == 0)]\n",
     "df2.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           protein  deg  global_bet_cent  global_eig_cent  global_bridge_cent  \\\n1730  4932.YJL225C    7         0.028042     8.852234e-08            0.003288   \n\n      icp55_shortest_path  pim1_shortest_path  inv  cluster  mcl_bet_cent  \\\n1730                    6                   4    0       84           0.0   \n\n      mcl_deg_cent  mcl_eig_cent  cluster_size  \n1730          0.25      0.186511            13  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>protein</th>\n      <th>deg</th>\n      <th>global_bet_cent</th>\n      <th>global_eig_cent</th>\n      <th>global_bridge_cent</th>\n      <th>icp55_shortest_path</th>\n      <th>pim1_shortest_path</th>\n      <th>inv</th>\n      <th>cluster</th>\n      <th>mcl_bet_cent</th>\n      <th>mcl_deg_cent</th>\n      <th>mcl_eig_cent</th>\n      <th>cluster_size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1730</th>\n      <td>4932.YJL225C</td>\n      <td>7</td>\n      <td>0.028042</td>\n      <td>8.852234e-08</td>\n      <td>0.003288</td>\n      <td>6</td>\n      <td>4</td>\n      <td>0</td>\n      <td>84</td>\n      <td>0.0</td>\n      <td>0.25</td>\n      <td>0.186511</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This protein has a high betweeness centrality and a moderate bridging centrality and is not inviable.\n",
+    "df3 = df[(df['global_bridge_cent'] >= 0.0025) & (df['global_bet_cent'] >= 0.02) & (df['inv'] == 0)]\n",
+    "df3.head()"
    ],
    "metadata": {
     "collapsed": false,
