--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -13,22 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\n",
     "%load_ext autoreload\n",
@@ -68,7 +59,9 @@
     }
    },
    "source": [
-    "I begin by reading in the network and a dataframe I have constructed with the following columns:\n",
+    "I've calculated several values and stored them into a data-table which I now read.\n",
+    "\n",
+    "The table has columns:\n",
     "- protein:: systematic name\n",
     "- deg: degree\n",
     "- global_bet_cent:: betweeness centrality in the entire network\n",
@@ -82,7 +75,9 @@
     "- cluster_size:: the size of the mcl cluster it belongs to\n",
     "- mcl_bet_cent:: betweeness centrality within the mcl cluster\n",
     "- mcl_eig_cent:: eigenvector centrality within the mcl cluster\n",
-    "- mcl_deg_cent:: degree centrality within the mcl cluster"
+    "- mcl_deg_cent:: degree centrality within the mcl cluster\n",
+    "\n",
+    "Below, the command `df.head()` shows the first 5 rows of the table."
    ]
   },
   {
@@ -119,7 +114,7 @@
     }
    },
    "source": [
-    "I then perform exploratory data analysis using the seaborn pairplot function."
+    "I then perform exploratory data analysis by plotting pairwise relationships between all numerical data. I start from as far out as possible to catch any obvious relationships. However, this is too cluttered."
    ]
   },
   {
@@ -163,7 +158,11 @@
     }
    },
    "source": [
-    "I reduce the variables to reduce clutter and colour the proteins by inviability. Notice in icp55_shortest_path x global_bet_cent there are two non-inviable proteins that stand out. Also bridging_centrality seems to have 2 outlier nodes."
+    "I reduce the variables and colour the inviable proteins orange.\n",
+    "\n",
+    "In (icp55_shortest_path x global_bet_cent) there are two non-inviable proteins that stand out.\n",
+    "\n",
+    "Bridging_centrality seems to have 3 outlier nodes.\n"
    ]
   },
   {
@@ -293,8 +292,11 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Analysis of clustering within MCL clusters\n",
     "I'm also suspicious of using centrality measures on small clusters. It appears that eigenvector centrality and betweeness centrality decay as a function of cluster size.\n",
-    "Therefore, clustering scores may not be comparable across clusters."
+    "Therefore, clustering scores may not be comparable across clusters.\n",
+    "\n",
+    "I plan to explore centrality measures as a function of cluster size further."
    ],
    "metadata": {
     "collapsed": false,
