First restricted network

--- a/notebooks/centralities.ipynb
+++ b/notebooks/centralities.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "import networkx as nx\n",
     "\n",
-    "import lib.cluster\n",
+    "import lib.centrality\n",
     "import lib.files\n",
     "import lib.graph"
    ],
@@ -47,8 +47,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Computing centralities within clusters\n",
-    "MAKE SURE you name the centrality_name correctly."
+    "### ICP55 cc 900 inv mcl cluster-shorpl<=3"
    ],
    "metadata": {
     "collapsed": false,
@@ -59,35 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "# The centrality function must only take a network as an argument. To use other arguments create a lambda function\n",
-    "# E.G.\n",
-    "# centrality_function = lambda network: nx.eigenvector_centrality(network, arg1, arg2, arg3)\n",
-    "centrality_function = nx.eigenvector_centrality\n",
-    "centrality_name = 'eigenvector_centrality'\n",
-    "\n",
-    "network = lib.graph.read_weighted_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt'))\n",
-    "cluster_filepath = lib.files.make_filepath_to_mcl_clusters('icp55-cc-900-inv.csv')\n",
-    "clusters = lib.cluster.read_csv(cluster_filepath)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "lib.cluster.compute_centralities(cluster_filepath, network, clusters, centrality_function, centrality_name)\n",
-    "\n",
-    "\n",
-    "\n"
+    "filepath = lib.files.make_filepath_to_networks('mcl_shorpl_lte_3.icp55-cc-900-inv.csv')\n",
+    "network = lib.graph.read_weighted_edgelist(filepath)\n",
+    "closeness = nx.closeness_centrality(network)\n",
+    "eigenvector = nx.eigenvector_centrality(network)\n",
+    "betweeness = nx.betweenness_centrality(network)\n",
+    "bridging = lib.centrality.bridging_centrality(network, betweeness=betweeness)  # pass betweeness to avoid recaculation.\n"
    ],
    "metadata": {
     "collapsed": false,
