--- a/notebooks/markov_clustering.ipynb
+++ b/notebooks/markov_clustering.ipynb
@@ -14,54 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\n",
-    "% load_ext autoreload\n",
-    "% autoreload 2\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "\n",
     "# Plotting code from Georg's notebook.\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "% matplotlib inline\n",
+    "%matplotlib inline\n",
     "font = {'family': 'DejaVu Sans',\n",
     "        'weight': 'bold',\n",
     "        'size': 32}\n",
-    "plt.rc('font', **font)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Imports"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Make the source directory available on all machines.\n",
-    "import sys\n",
-    "\n",
-    "# This must be executed before importing any files from the 'lib' module which exists in the src directory.\n",
-    "sys.path.insert(1, \"..\\\\..\\\\\")\n",
+    "plt.rc('font', **font)\n",
     "\n",
     "# Personal libraries\n",
     "import lib.cluster\n",
     "import lib.graph\n",
-    "import lib.files"
+    "import lib.files\n",
+    "import lib.constants"
    ],
    "metadata": {
     "collapsed": false,
@@ -84,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "INFLATION = 2  # The parameter controlling Markov Clustering"
@@ -101,7 +75,7 @@
    "source": [
     "# Analysis\n",
     "\n",
-    "### ICP55 connected component with inviable proteins"
+    "### MCL of ICP55-cc-900-inv"
    ],
    "metadata": {
     "collapsed": false,
@@ -112,14 +86,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "lib.cluster.run_mcl_and_write_to_file(\n",
-    "    graph=lib.graph.read_weighted_edgelist(lib.files.make_filepath_to_networks('icp55-cc-900-inv.txt')),\n",
-    "    filepath=lib.files.make_filepath_to_mcl_clusters(\"icp55-cc-inviable.csv\"),\n",
-    "    inflation=INFLATION\n",
-    ")"
+    "network_name = 'icp55-cc-900-inv'\n",
+    "network_filepath = lib.files.make_filepath_to_networks(f'{network_name}.txt')\n",
+    "cluster_filepath = lib.files.make_filepath_to_clusters(f'mcl.{network_name}.nodes.csv')\n",
+    "cluster_df_filepath = lib.files.make_filepath_to_clusters(f'mcl.{network_name}.dataframe.csv')\n",
+    "\n",
+    "network = lib.graph.read_weighted_edgelist(network_filepath)\n",
+    "mcl_data = lib.cluster.run_mcl(network, INFLATION)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "# UNCOMMENTING BELOW WILL OVERWRITE THE EXISTING FILES\n",
+    "lib.cluster.generate_and_save_dataframe(network, mcl_data.clusters, cluster_df_filepath)\n",
+    "lib.cluster.write_to_file(cluster_filepath, mcl_data.clusters)"
    ],
    "metadata": {
     "collapsed": false,
