--- a/notebooks/network_preprocessing.ipynb
+++ b/notebooks/network_preprocessing.ipynb
@@ -34,40 +34,16 @@
     "font = {'family': 'DejaVu Sans',\n",
     "        'weight': 'bold',\n",
     "        'size': 32}\n",
-    "plt.rc('font', **font)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Imports"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "# Make the source directory available on all machines.\n",
-    "import sys\n",
-    "\n",
-    "# This must be executed before importing any files from the 'lib' module which exists in the src directory.\n",
-    "sys.path.insert(1, \"..\\\\..\\\\\")\n",
+    "plt.rc('font', **font)\n",
     "\n",
     "import networkx as nx\n",
+    "import pandas as pd\n",
     "\n",
     "# Personal libraries\n",
     "import lib.graph\n",
-    "import lib.files"
+    "import lib.files\n",
+    "import lib.cluster\n",
+    "import lib.constants"
    ],
    "metadata": {
     "collapsed": false,
@@ -161,6 +137,64 @@
     "\n",
     "# Write to file\n",
     "lib.graph.write_weighted_edgelist(n1, lib.files.make_filepath_to_networks('icp55-cc-900-noInv.txt'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### ICP55 cc 900 inv mcl cluster-shorpl<=3\n",
+    "Connected component of ICP55 including inviable proteins.\n",
+    "\n",
+    "Cutoff = 900\n",
+    "\n",
+    "Markov clustering\n",
+    "\n",
+    "Restricted to nodes with shortest path length <= 3 to icp55 or pim1 and nodes belonging to clusters with\n",
+    "shortest path length <= 3 to icp55 or pim1."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "SHORPL_CUTOFF = 3\n",
+    "\n",
+    "network_name = 'icp55-cc-900-inv'\n",
+    "network_filepath = lib.files.make_filepath_to_networks(f'{network_name}.txt')\n",
+    "cluster_filepath = lib.files.make_filepath_to_clusters(f'mcl.{network_name}.nodes.csv')\n",
+    "cluster_df_filepath = lib.files.make_filepath_to_clusters(f'mcl.{network_name}.dataframe.csv')\n",
+    "\n",
+    "network = lib.graph.read_weighted_edgelist(network_filepath)\n",
+    "clusters = lib.cluster.read_csv(cluster_filepath)\n",
+    "cluster_df = pd.read_csv(cluster_df_filepath, header=0, index_col=0)\n",
+    "\n",
+    "condition_1 = cluster_df['size'] > 5\n",
+    "condition_2 = (cluster_df['icp55_shorpl'] <= SHORPL_CUTOFF) | (cluster_df['pim1_shorpl'] <= SHORPL_CUTOFF)\n",
+    "relevant_cluster_df = cluster_df[condition_1 & condition_2]\n",
+    "relevant_clusters = [clusters[idx] for idx in relevant_cluster_df['cluster']]\n",
+    "\n",
+    "relevant_proteins = set()\n",
+    "relevant_proteins.update(lib.cluster.proteins(relevant_clusters))\n",
+    "relevant_proteins.update(lib.graph.get_neighbourhood(network, lib.constants.ICP55, SHORPL_CUTOFF))\n",
+    "relevant_proteins.update(lib.graph.get_neighbourhood(network, lib.constants.PIM1, SHORPL_CUTOFF))\n",
+    "relevant_cluster_network = lib.graph.get_largest_connected_component(network.subgraph(relevant_proteins))\n",
+    "\n",
+    "filepath = lib.files.make_filepath_to_networks('mcl_shorpl_lte_3.icp55-cc-900-inv.csv')\n",
+    "# UNCOMMENTING BELOW WILL OVERWRITE FILE\n",
+    "# lib.graph.write_weighted_edgelist(relevant_cluster_network, filepath)"
    ],
    "metadata": {
     "collapsed": false,
