--- a/notebooks/billy.ipynb
+++ b/notebooks/billy.ipynb
@@ -30,7 +30,21 @@
     "import lib.plot\n",
     "import lib.cluster\n",
     "import lib.graph\n",
-    "import lib.files\n"
+    "import lib.files"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "i_am_intruder = 1\n"
    ],
    "metadata": {
     "collapsed": false,
