--- a/notebooks/billy.ipynb
+++ b/notebooks/billy.ipynb
@@ -99,7 +99,37 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def billy_method(network, clusters):\n",
+    "\n",
+    "    proteins = []\n",
+    "    protein_degrees = []\n",
+    "    protein_eigenvector_centralities_within_cluster = []\n",
+    "\n",
+    "    for i, cluster in enumerate(clusters):\n",
+    "\n",
+    "        # Change the cluster variable from a list to a subgraph to use networkx functions such as cluster.degree()\n",
+    "        cluster = network.subgraph(cluster)\n",
+    "\n",
+    "        # Compute the eigenvector centralities for the cluster.\n",
+    "        eigenvector = nx.eigenvector_centrality(cluster)\n",
+    "\n",
+    "        for protein in cluster:\n",
+    "            proteins.append(protein)\n",
+    "            protein_degrees.append(cluster.degree()[protein])\n",
+    "            protein_eigenvector_centralities_within_cluster.append(eigenvector[protein])\n",
+    "\n",
+    "    return pd.DataFrame.from_records(\n",
+    "        list(zip(\n",
+    "            proteins,\n",
+    "            protein_degrees,\n",
+    "            protein_eigenvector_centralities_within_cluster)),\n",
+    "        columns=[\n",
+    "            'protein',\n",
+    "            'degree',\n",
+    "            'eigenvector']\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
