Added Billy node plot example

--- a/notebooks/markov_clustering.ipynb
+++ b/notebooks/markov_clustering.ipynb
@@ -502,6 +502,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# This cell has the code to compute pc2p clusters.\n",
+    "\n",
+    "# Run PC2P clustering O(n^2 max_deg^2)\n",
+    "# Because of the issue of hub nodes, I'm going to remove all nodes with high degree\n",
+    "nodes_to_remove = [node for node in network if network.degree()[node] >= 50]\n",
+    "network.remove_nodes_from(nodes_to_remove)\n",
+    "network = lib.graph.get_largest_cc_with_node(network, lib.constants.ICP55)\n",
+    "print(f\"Numbewr of nodes {len(network)}\")\n",
+    "clusters = lib.cluster.run_pc2p(network)\n",
+    "\n",
+    "# We need to convert each cluster from a list to a set for pc2p_analysis.\n",
+    "clusters = list(map(set, clusters))\n",
+    "\n",
+    "# Save the clusters to a file\n",
+    "# filepath = lib.files.make_filepath_to_mcl_clusters(f\"{network_name}.mcl-{inflation}.csv\")\n",
+    "filepath = lib.files.make_filepath_to_clusters(f\"{network_name}.pc2p.csv\")\n",
+    "filepaths.append(filepath)\n",
+    "lib.cluster.write_to_file(filepath, clusters)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "outputs": [
     {
@@ -737,34 +768,34 @@
     "    # modularity.append(mcl_data.modularity)\n",
     "\n",
     "\n",
-    "    num_clusters.append(len(clusters))\n",
-    "    percentage_connected.append(len(\n",
-    "        [cluster for cluster in clusters if nx.is_connected(network.subgraph(cluster))]\n",
-    "    ) / len(clusters))\n",
-    "\n",
-    "    # Compute yhtp metrics\n",
-    "    sensitivity_yhtp.append(pc2p_analysis.clusteringwise_sensitivity(yhtp2008, clusters))\n",
-    "    positive_predicted_value_yhtp.append(pc2p_analysis.positive_predictive_value(yhtp2008, clusters))\n",
-    "    accuracy_yhtp.append(pc2p_analysis.accuracy(yhtp2008, clusters))\n",
-    "    fraction_matched_yhtp.append(pc2p_analysis.fraction_matched(yhtp2008, clusters))\n",
-    "    separation_yhtp.append(pc2p_analysis.clusteringwise_separation(yhtp2008, clusters))\n",
-    "    precision_jaccard_yhtp.append(pc2p_analysis.precision_Jaccard(yhtp2008, clusters))\n",
-    "    recall_jaccard_yhtp.append(pc2p_analysis.recall_Jaccard(yhtp2008, clusters))\n",
-    "    f_measure_jaccard_yhtp.append(pc2p_analysis.F_measure_Jaccard(yhtp2008, clusters))\n",
-    "\n",
-    "    # Compute sgd metrics\n",
-    "    sensitivity_sgd.append(pc2p_analysis.clusteringwise_sensitivity(sgd, clusters))\n",
-    "    positive_predicted_value_sgd.append(pc2p_analysis.positive_predictive_value(sgd, clusters))\n",
-    "    accuracy_sgd.append(pc2p_analysis.accuracy(sgd, clusters))\n",
-    "    fraction_matched_sgd.append(pc2p_analysis.fraction_matched(sgd, clusters))\n",
-    "    separation_sgd.append(pc2p_analysis.clusteringwise_separation(sgd, clusters))\n",
-    "    precision_jaccard_sgd.append(pc2p_analysis.precision_Jaccard(sgd, clusters))\n",
-    "    recall_jaccard_sgd.append(pc2p_analysis.recall_Jaccard(sgd, clusters))\n",
-    "    f_measure_jaccard_sgd.append(pc2p_analysis.F_measure_Jaccard(sgd, clusters))\n",
+    "    # num_clusters.append(len(clusters))\n",
+    "    # percentage_connected.append(len(\n",
+    "    #     [cluster for cluster in clusters if nx.is_connected(network.subgraph(cluster))]\n",
+    "    # ) / len(clusters))\n",
     "    #\n",
-    "    end = time.time()\n",
-    "    seconds = end - start\n",
-    "    times.append(seconds)\n",
+    "    # # Compute yhtp metrics\n",
+    "    # sensitivity_yhtp.append(pc2p_analysis.clusteringwise_sensitivity(yhtp2008, clusters))\n",
+    "    # positive_predicted_value_yhtp.append(pc2p_analysis.positive_predictive_value(yhtp2008, clusters))\n",
+    "    # accuracy_yhtp.append(pc2p_analysis.accuracy(yhtp2008, clusters))\n",
+    "    # fraction_matched_yhtp.append(pc2p_analysis.fraction_matched(yhtp2008, clusters))\n",
+    "    # separation_yhtp.append(pc2p_analysis.clusteringwise_separation(yhtp2008, clusters))\n",
+    "    # precision_jaccard_yhtp.append(pc2p_analysis.precision_Jaccard(yhtp2008, clusters))\n",
+    "    # recall_jaccard_yhtp.append(pc2p_analysis.recall_Jaccard(yhtp2008, clusters))\n",
+    "    # f_measure_jaccard_yhtp.append(pc2p_analysis.F_measure_Jaccard(yhtp2008, clusters))\n",
+    "    #\n",
+    "    # # Compute sgd metrics\n",
+    "    # sensitivity_sgd.append(pc2p_analysis.clusteringwise_sensitivity(sgd, clusters))\n",
+    "    # positive_predicted_value_sgd.append(pc2p_analysis.positive_predictive_value(sgd, clusters))\n",
+    "    # accuracy_sgd.append(pc2p_analysis.accuracy(sgd, clusters))\n",
+    "    # fraction_matched_sgd.append(pc2p_analysis.fraction_matched(sgd, clusters))\n",
+    "    # separation_sgd.append(pc2p_analysis.clusteringwise_separation(sgd, clusters))\n",
+    "    # precision_jaccard_sgd.append(pc2p_analysis.precision_Jaccard(sgd, clusters))\n",
+    "    # recall_jaccard_sgd.append(pc2p_analysis.recall_Jaccard(sgd, clusters))\n",
+    "    # f_measure_jaccard_sgd.append(pc2p_analysis.F_measure_Jaccard(sgd, clusters))\n",
+    "    # #\n",
+    "    # end = time.time()\n",
+    "    # seconds = end - start\n",
+    "    # times.append(seconds)\n",
     "\n",
     "# Make a dataframe with each row representing a clustering.\n",
     "# Save the dataframe to a file.\n",
