Added node tables for MCL and PC2P

--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -766,7 +766,95 @@
     "sns.set()\n",
     "sns.pairplot(relevant_cluster_df,\n",
     "             vars=['size'],\n",
-    "             diag_kind='kde')\n"
+    "             diag_kind='kde')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Preparing data\n",
+      "Computing betweenness\n",
+      "Computing closeness\n",
+      "Computing bridging\n",
+      "Computing eigenvector\n",
+      "Computing closeness in cluster\n",
+      "Computing eigenvector in cluster\n",
+      "Arranging columns\n",
+      "Adding dataframe to file\n",
+      "Preparing data\n",
+      "Computing betweenness\n",
+      "Computing closeness\n",
+      "Computing bridging\n",
+      "Computing eigenvector\n",
+      "Computing closeness in cluster\n",
+      "Computing eigenvector in cluster\n",
+      "Arranging columns\n",
+      "Adding dataframe to file\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "# This cell computes the big node dataframe table for mcl-2.5 and pc2p.\n",
+    "import lib.dataframes\n",
+    "\n",
+    "# lib.dataframes.node_dataframe('karate-club', 'mcl-2.0', _closeness=True, _degree=True)\n",
+    "lib.dataframes.node_dataframe('icp55-cc-900-inv', 'mcl-2.5', True, True, True, True, True, True, True, True, True, True, True, True, True)\n",
+    "lib.dataframes.node_dataframe('icp55-cc-900-inv', 'pc2p', True, True, True, True, True, True, True, True, True, True, True, True, True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "# This cell creates a small graph and clusters to test computationally expensive functions on.\n",
+    "\n",
+    "import networkx as nx\n",
+    "import lib.files\n",
+    "\n",
+    "network = nx.karate_club_graph()\n",
+    "network_name = 'karate-club'\n",
+    "network_filename = lib.files.make_network_filename(network_name)\n",
+    "network_filepath = lib.files.make_filepath_to_networks(network_filename)\n",
+    "lib.graph.write_weighted_edgelist(network, network_filepath)\n",
+    "\n",
+    "clusters = lib.cluster.run_mcl(network, 2).clusters\n",
+    "cluster_name = 'mcl-2.0'\n",
+    "cluster_filename = lib.files.make_clusters_filename(network_name, cluster_name)\n",
+    "cluster_filepath = lib.files.make_filepath_to_clusters(cluster_filename)\n",
+    "lib.cluster.write_to_file(cluster_filepath, clusters)\n"
    ],
    "metadata": {
     "collapsed": false,
