--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -1231,7 +1231,34 @@
     "# targets = [*targets_1.nodes(), *targets_2.nodes()]\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(30,30))\n",
-    "lib.plot.targets_with_clusters(network_name, clusters_name, targets, ax)\n"
+    "lib.plot.targets_with_clusters(network_name, clusters_name, targets, ax)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing data\n",
+      "Computing betweenness in cluster\n",
+      "Arranging columns\n",
+      "Adding dataframe to file\n"
+     ]
+    }
+   ],
+   "source": [
+    "import lib.dataframes\n",
+    "\n",
+    "lib.dataframes.node_dataframe('icp55-cc-900-inv', 'mcl-2.5', _cluster_betweenness=True)"
    ],
    "metadata": {
     "collapsed": false,
